--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,36 @@ matrix:
     env: TOXENV=py34 TOXPYTHON=/home/travis/virtualenv/python3.4.8/bin/python3.4
   - python: "3.5"
     env: TOXENV=py35
+  - python: "2.7"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py27
+  - python: "3.5"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py35
+  - python: "3.6"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py36
+  - python: "3.7"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py37
+  - python: "3.8"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py38
+  - python: "3.9"
+    arch: arm64-graviton2
+    group: edge
+    virt: lxd
+    env: TOXENV=py39
   - python: "3.6"
     env: TOXENV=py36
   - python: "3.7"
